added config for deactivating hdmi

--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -18,3 +18,8 @@ media_player:
       sources:
         tv-cd: Vinyl
         internet-radio-1: AirPlay
+
+logger:
+  default: warning
+  logs:
+    homeassistant.components.onkyo: debug
